--- a/assets/style.css
+++ b/assets/style.css
@@ -1,1 +1,6 @@
-@import 'bulma/css/bulma.css'
+header {
+    background-image: linear-gradient(to right, purple,blue);
+    background-size: cover;
+    text-align: center;
+    color:cornsilk;
+}
